add availableBlocks and storedBlocks to the BlockNodeContext to make them available to interested plugins
____________________________________________________________________
Signed-off-by: berryware <231598+berryware@users.noreply.github.com>

# Conflicts:
#	block-node/block-verification/src/test/java/org/hiero/block/node/verification/AllBlocksHasherHandlerTest.java